logs/smolder.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/Yapsy-1.11.223.egg-info'...
Listing './lib/python3.5/site-packages/argh'...
Listing './lib/python3.5/site-packages/argh-0.26.2.dist-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/decorator-4.1.2.dist-info'...
Listing './lib/python3.5/site-packages/dpath'...
Listing './lib/python3.5/site-packages/dpath-1.4.2.egg-info'...
Listing './lib/python3.5/site-packages/ecdsa'...
Listing './lib/python3.5/site-packages/ecdsa-0.13.dist-info'...
Listing './lib/python3.5/site-packages/httpretty'...
Listing './lib/python3.5/site-packages/httpretty-0.8.10.egg-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/jsonpickle'...
Listing './lib/python3.5/site-packages/jsonpickle/ext'...
Listing './lib/python3.5/site-packages/jsonpickle-0.9.5.egg-info'...
Listing './lib/python3.5/site-packages/ldap3'...
Listing './lib/python3.5/site-packages/ldap3/abstract'...
Listing './lib/python3.5/site-packages/ldap3/core'...
Listing './lib/python3.5/site-packages/ldap3/extend'...
Listing './lib/python3.5/site-packages/ldap3/extend/microsoft'...
Listing './lib/python3.5/site-packages/ldap3/extend/novell'...
Listing './lib/python3.5/site-packages/ldap3/extend/standard'...
Listing './lib/python3.5/site-packages/ldap3/operation'...
Listing './lib/python3.5/site-packages/ldap3/protocol'...
Listing './lib/python3.5/site-packages/ldap3/protocol/formatters'...
Listing './lib/python3.5/site-packages/ldap3/protocol/sasl'...
Listing './lib/python3.5/site-packages/ldap3/protocol/schemas'...
Listing './lib/python3.5/site-packages/ldap3/strategy'...
Listing './lib/python3.5/site-packages/ldap3/utils'...
Listing './lib/python3.5/site-packages/ldap3-2.4.dist-info'...
Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/nose'...
Listing './lib/python3.5/site-packages/nose/ext'...
Listing './lib/python3.5/site-packages/nose/plugins'...
Listing './lib/python3.5/site-packages/nose/sphinx'...
Listing './lib/python3.5/site-packages/nose/tools'...
Listing './lib/python3.5/site-packages/nose-1.3.7.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/py'...
Listing './lib/python3.5/site-packages/py/_code'...
Listing './lib/python3.5/site-packages/py/_io'...
Listing './lib/python3.5/site-packages/py/_log'...
Listing './lib/python3.5/site-packages/py/_path'...
Listing './lib/python3.5/site-packages/py/_process'...
Listing './lib/python3.5/site-packages/py/_vendored_packages'...
Listing './lib/python3.5/site-packages/py-1.5.2.dist-info'...
Listing './lib/python3.5/site-packages/pyasn1'...
Listing './lib/python3.5/site-packages/pyasn1/codec'...
Listing './lib/python3.5/site-packages/pyasn1/codec/ber'...
Listing './lib/python3.5/site-packages/pyasn1/codec/cer'...
Listing './lib/python3.5/site-packages/pyasn1/codec/der'...
Listing './lib/python3.5/site-packages/pyasn1/codec/native'...
Listing './lib/python3.5/site-packages/pyasn1/compat'...
Listing './lib/python3.5/site-packages/pyasn1/type'...
Listing './lib/python3.5/site-packages/pyasn1-0.4.2.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/retry'...
Listing './lib/python3.5/site-packages/retry/tests'...
Listing './lib/python3.5/site-packages/retry-0.9.2.dist-info'...
Listing './lib/python3.5/site-packages/retrying-1.3.3.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/smolder'...
Listing './lib/python3.5/site-packages/smolder-0.6.0.0.egg-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/validictory'...
Listing './lib/python3.5/site-packages/validictory/tests'...
Listing './lib/python3.5/site-packages/validictory-1.1.2.dist-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './lib/python3.5/site-packages/yapsy'...
Listing './man'...
Listing './man/man1'...
Listing './share'...
Listing './share/python-wheels'...
